Use sprout's limits instead of std's and remove unneeded make_unsigned.
I'm not sure what it was supposed to be, maybe a customization point
or something, but after the fix for counting the digits correctly I
removed the only usage of make_unsigned, so I could also get rid of
its implementation. Sweet~

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,11 @@ target_include_directories(${PROJECT_NAME}
 	INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include
 	INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/lib/sprout
 )
+target_compile_definitions(${PROJECT_NAME}
+	INTERFACE SPROUT_NO_CXX11_NUMERIC_LIMITS
+	INTERFACE SPROUT_USE_TEMPLATE_ALIASES
+)
+
 if (BUILD_TESTING)
 	add_subdirectory(test/unit)
 endif()
